[package]
name = "fx-conversation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { version = "1.13", features = ["v4"] }

[dev-dependencies]
tempfile = "3.14"
